// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopBar /> should render as divided 1`] = `
<div>
  <div
    class="root size-m inner-border-bottom no-subtitle"
    style="height: 64px;"
  >
    <div
      class="main"
    />
  </div>
</div>
`;

exports[`<TopBar /> should render without props 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="main"
    />
  </div>
</div>
`;

exports[`<TopBar /> should renders with end icon 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group stub end"
      >
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group end"
      >
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.336 12.747a1 1 0 01-.083-1.411l8-9a1 1 0 011.494 0l8 9a1 1 0 01-1.494 1.328L12 4.505l-7.253 8.16a1 1 0 01-1.411.082z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 22a1 1 0 01-1-1V4a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar /> should renders with end icons 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group stub end"
      >
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group end"
      >
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.293 12.293a1 1 0 011.414 0L12 19.586l7.293-7.293a1 1 0 011.414 1.414l-8 8a1 1 0 01-1.414 0l-8-8a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 21a1 1 0 01-1-1V3a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.336 12.747a1 1 0 01-.083-1.411l8-9a1 1 0 011.494 0l8 9a1 1 0 01-1.494 1.328L12 4.505l-7.253 8.16a1 1 0 01-1.411.082z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 22a1 1 0 01-1-1V4a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar /> should renders with end text button 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group stub end"
      >
        <button
          aria-hidden="true"
          class="button stub"
          type="button"
        >
          World
        </button>
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group end"
      >
        <button
          class="button"
          data-testid="top-bar:button"
          type="button"
        >
          World
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar /> should renders with mixed buttons 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group"
      >
        <button
          class="button"
          data-testid="top-bar:button"
          type="button"
        >
          World
        </button>
      </div>
      <div
        class="button-group stub end"
      >
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group end"
      >
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.336 12.747a1 1 0 01-.083-1.411l8-9a1 1 0 011.494 0l8 9a1 1 0 01-1.494 1.328L12 4.505l-7.253 8.16a1 1 0 01-1.411.082z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 22a1 1 0 01-1-1V4a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        class="button-group stub"
      >
        <button
          aria-hidden="true"
          class="button stub"
          type="button"
        >
          World
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar /> should renders with start icon 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group"
      >
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.336 12.747a1 1 0 01-.083-1.411l8-9a1 1 0 011.494 0l8 9a1 1 0 01-1.494 1.328L12 4.505l-7.253 8.16a1 1 0 01-1.411.082z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 22a1 1 0 01-1-1V4a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group stub"
      >
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar /> should renders with start icons 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group"
      >
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.336 12.747a1 1 0 01-.083-1.411l8-9a1 1 0 011.494 0l8 9a1 1 0 01-1.494 1.328L12 4.505l-7.253 8.16a1 1 0 01-1.411.082z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 22a1 1 0 01-1-1V4a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <button
          class="button iconic"
          data-testid="top-bar:button"
          type="button"
        >
          <svg
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              clip-rule="evenodd"
              d="M3.293 12.293a1 1 0 011.414 0L12 19.586l7.293-7.293a1 1 0 011.414 1.414l-8 8a1 1 0 01-1.414 0l-8-8a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
            <path
              clip-rule="evenodd"
              d="M12 21a1 1 0 01-1-1V3a1 1 0 112 0v17a1 1 0 01-1 1z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group stub"
      >
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
        <button
          aria-hidden="true"
          class="button iconic stub"
          type="button"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TopBar /> should renders with start text button 1`] = `
<div>
  <div
    class="root size-m no-subtitle"
    style="height: 64px;"
  >
    <div
      class="side"
    >
      <div
        class="button-group"
      >
        <button
          class="button"
          data-testid="top-bar:button"
          type="button"
        >
          Hello
        </button>
      </div>
    </div>
    <div
      class="main"
    />
    <div
      class="side"
    >
      <div
        class="button-group stub"
      >
        <button
          aria-hidden="true"
          class="button stub"
          type="button"
        >
          Hello
        </button>
      </div>
    </div>
  </div>
</div>
`;
